bài tập ngày 21-04-12

--- a/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
+++ b/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>Frm_NhanVien_Modifies.cs</DependentUpon>
     </Compile>
     <Compile Include="DAO\NhanVien.cs" />
+    <Compile Include="DAO\PhieuNhap.cs" />
     <Compile Include="Frm_KetNoi.cs">
       <SubType>Form</SubType>
     </Compile>
