--- a/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
+++ b/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -152,6 +155,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Commons\Commons.csproj">
+      <Project>{1dfe3950-1546-4bec-b6e9-0c95f75fa946}</Project>
+      <Name>Commons</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
       <Project>{2db5097d-c2ec-41d5-be9e-89a6b6922eb8}</Project>
       <Name>DataLayer</Name>
