Them phan quyen dong

--- a/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
+++ b/Projects/Project_20210308/Project_20210308/Project_20210308.csproj
@@ -35,9 +35,12 @@
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,11 +51,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BussinessLayer\BLL_Basic.cs" />
+    <Compile Include="BussinessLayer\BLL_BanHang.cs" />
+    <Compile Include="BussinessLayer\BLL_Base.cs" />
     <Compile Include="BussinessLayer\BLL_DangNhap.cs" />
+    <Compile Include="BussinessLayer\BLL_DonViTinh.cs" />
+    <Compile Include="BussinessLayer\BLL_GiaBan.cs" />
     <Compile Include="BussinessLayer\BLL_NhanVien.cs" />
     <Compile Include="BussinessLayer\BLL_NhapSanPham.cs" />
+    <Compile Include="BussinessLayer\BLL_PhanQuyen.cs" />
+    <Compile Include="BussinessLayer\BLL_TaiKhoan.cs" />
+    <Compile Include="BussinessLayer\BLL_ThongKe.cs" />
     <Compile Include="Cls_Main.cs" />
+    <Compile Include="DanhMuc\Frm_DonViTinh_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_DonViTinh_Main.Designer.cs">
+      <DependentUpon>Frm_DonViTinh_Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_DonViTinh_Modifies.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_DonViTinh_Modifies.Designer.cs">
+      <DependentUpon>Frm_DonViTinh_Modifies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_LoaiSanPham_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_LoaiSanPham_Main.Designer.cs">
+      <DependentUpon>Frm_LoaiSanPham_Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_NhaCungCap_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_NhaCungCap_Main.Designer.cs">
+      <DependentUpon>Frm_NhaCungCap_Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="DanhMuc\Frm_NhanVien_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,10 +98,18 @@
     <Compile Include="DanhMuc\Frm_NhanVien_Modifies.Designer.cs">
       <DependentUpon>Frm_NhanVien_Modifies.cs</DependentUpon>
     </Compile>
+    <Compile Include="DanhMuc\Frm_TaiKhoan_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\Frm_TaiKhoan_Main.Designer.cs">
+      <DependentUpon>Frm_TaiKhoan_Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAO\ChiTietPhieuNhap.cs" />
+    <Compile Include="DAO\DonViTinh.cs" />
     <Compile Include="DAO\NhanVien.cs" />
     <Compile Include="DAO\PhieuNhap.cs" />
     <Compile Include="DAO\SanPham.cs" />
+    <Compile Include="DAO\TaiKhoan.cs" />
     <Compile Include="Frm_KetNoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,8 +128,59 @@
     <Compile Include="Frm_Main.Designer.cs">
       <DependentUpon>Frm_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="HeThong\Frm_DoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeThong\Frm_DoiMatKhau.Designer.cs">
+      <DependentUpon>Frm_DoiMatKhau.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HeThong\Frm_HuongDanSuDung.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeThong\Frm_HuongDanSuDung.Designer.cs">
+      <DependentUpon>Frm_HuongDanSuDung.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HeThong\Frm_PhanQuyen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeThong\Frm_PhanQuyen.Designer.cs">
+      <DependentUpon>Frm_PhanQuyen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HeThong\Frm_SaoLuu_PhucHoi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeThong\Frm_SaoLuu_PhucHoi.Designer.cs">
+      <DependentUpon>Frm_SaoLuu_PhucHoi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HeThong\Frm_ThongTin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeThong\Frm_ThongTin.Designer.cs">
+      <DependentUpon>Frm_ThongTin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TacVu\DS_InPhieuNhap.cs">
+      <DependentUpon>DS_InPhieuNhap.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TacVu\DS_InPhieuNhap.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DS_InPhieuNhap.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TacVu\Frm_BanHang_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TacVu\Frm_BanHang_Main.Designer.cs">
+      <DependentUpon>Frm_BanHang_Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TacVu\Frm_InPhieuNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TacVu\Frm_InPhieuNhap.Designer.cs">
+      <DependentUpon>Frm_InPhieuNhap.cs</DependentUpon>
+    </Compile>
     <Compile Include="TacVu\Frm_NhapSanPham_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,11 +199,44 @@
     <Compile Include="TacVu\Frm_NhapSanPham_SuaPhieuNhap.Designer.cs">
       <DependentUpon>Frm_NhapSanPham_SuaPhieuNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="TacVu\Frm_QuanLyGiaBan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TacVu\Frm_QuanLyGiaBan.Designer.cs">
+      <DependentUpon>Frm_QuanLyGiaBan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ThongKe\Frm_KiemHangTon_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThongKe\Frm_KiemHangTon_Main.Designer.cs">
+      <DependentUpon>Frm_KiemHangTon_Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ThongKe\Frm_ThongKeDoanhThu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThongKe\Frm_ThongKeDoanhThu.Designer.cs">
+      <DependentUpon>Frm_ThongKeDoanhThu.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DanhMuc\Frm_DonViTinh_Main.resx">
+      <DependentUpon>Frm_DonViTinh_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\Frm_DonViTinh_Modifies.resx">
+      <DependentUpon>Frm_DonViTinh_Modifies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\Frm_LoaiSanPham_Main.resx">
+      <DependentUpon>Frm_LoaiSanPham_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\Frm_NhaCungCap_Main.resx">
+      <DependentUpon>Frm_NhaCungCap_Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DanhMuc\Frm_NhanVien_Main.resx">
       <DependentUpon>Frm_NhanVien_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DanhMuc\Frm_NhanVien_Modifies.resx">
       <DependentUpon>Frm_NhanVien_Modifies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\Frm_TaiKhoan_Main.resx">
+      <DependentUpon>Frm_TaiKhoan_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_KetNoi.resx">
       <DependentUpon>Frm_KetNoi.cs</DependentUpon>
@@ -121,6 +246,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Main.resx">
       <DependentUpon>Frm_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HeThong\Frm_DoiMatKhau.resx">
+      <DependentUpon>Frm_DoiMatKhau.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HeThong\Frm_PhanQuyen.resx">
+      <DependentUpon>Frm_PhanQuyen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HeThong\Frm_SaoLuu_PhucHoi.resx">
+      <DependentUpon>Frm_SaoLuu_PhucHoi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -132,6 +266,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TacVu\Frm_BanHang_Main.resx">
+      <DependentUpon>Frm_BanHang_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TacVu\Frm_InPhieuNhap.resx">
+      <DependentUpon>Frm_InPhieuNhap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TacVu\Frm_NhapSanPham_Main.resx">
       <DependentUpon>Frm_NhapSanPham_Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +280,16 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TacVu\Frm_NhapSanPham_SuaPhieuNhap.resx">
       <DependentUpon>Frm_NhapSanPham_SuaPhieuNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TacVu\Frm_QuanLyGiaBan.resx">
+      <DependentUpon>Frm_QuanLyGiaBan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TacVu\Rp_InPhieuNhap.rdlc" />
+    <EmbeddedResource Include="ThongKe\Frm_KiemHangTon_Main.resx">
+      <DependentUpon>Frm_KiemHangTon_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThongKe\Frm_ThongKeDoanhThu.resx">
+      <DependentUpon>Frm_ThongKeDoanhThu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -150,6 +300,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TacVu\DS_InPhieuNhap.xsc">
+      <DependentUpon>DS_InPhieuNhap.xsd</DependentUpon>
+    </None>
+    <None Include="TacVu\DS_InPhieuNhap.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DS_InPhieuNhap.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="TacVu\DS_InPhieuNhap.xss">
+      <DependentUpon>DS_InPhieuNhap.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -184,6 +345,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\search_property_32px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\refund_50px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
